--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recoil": "^0.7.6",
+    "sass": "^1.57.0",
     "typescript": "4.9.4"
   }
 }
